force-app/main/default/objects/animalos__Location__c/fields/animalos__Active__c.field-meta.xml
<CustomField>
    <fullName>animalos__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>