force-app/main/default/objects/animalos__Location__c/fields/animalos__Adjusted_Capacity__c.field-meta.xml
<CustomField>
    <fullName>animalos__Adjusted_Capacity__c</fullName>
    <label>Adjusted Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>