force-app/main/default/objects/animalos__Location__c/fields/animalos__Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Type__c</fullName>
    <label>Animal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Canine</fullName>
            </value>
            <value>
                <fullName>Feline</fullName>
            </value>
            <value>
                <fullName>Koala</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Mammal</fullName>
            </value>
            <value>
                <fullName>Reptile</fullName>
            </value>
            <value>
                <fullName>Small Animal</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>