force-app/main/default/objects/animalos__Location__c/fields/animalos__Availability__c.field-meta.xml
<CustomField>
    <fullName>animalos__Availability__c</fullName>
    <label>Availability</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>