force-app/main/default/objects/animalos__Location__c/fields/animalos__Capacity__c.field-meta.xml
<CustomField>
    <fullName>animalos__Capacity__c</fullName>
    <label>Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>