force-app/main/default/objects/animalos__Location__c/fields/animalos__Contact__c.field-meta.xml
<CustomField>
    <fullName>animalos__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Foster Locations</relationshipLabel>
    <relationshipName>Foster_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>