force-app/main/default/objects/animalos__Location__c/fields/animalos__Enable_Fast_Action_Completion__c.field-meta.xml
<CustomField>
    <fullName>animalos__Enable_Fast_Action_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Fast Action Completion</label>
    <type>Checkbox</type>
</CustomField>