force-app/main/default/objects/animalos__Location__c/fields/animalos__Full_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Full_Location_Name__c</fullName>
    <formula>CASE( RecordType.Name,
    &apos;Block&apos;, IF(ISBLANK( animalos__Sitename__c), Name, animalos__Parent_Block__r.Name &amp; &apos; / &apos; &amp; Name),
    &apos;Unit&apos;, IF(ISBLANK( animalos__Sitename__c), animalos__Parent_Block__r.Name &amp; &apos; / &apos; &amp; Name, animalos__Parent_Block__r.animalos__Parent_Block__r.Name &amp; &apos; / &apos; &amp; animalos__Parent_Block__r.Name &amp; &apos; / &apos; &amp; Name),
    &apos;Site&apos;, Name, 
    &apos;Foster&apos;, Name,
    &apos;Offsite&apos;, Name, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Location Name</label>
    <type>Text</type>
</CustomField>