force-app/main/default/objects/animalos__Location__c/fields/animalos__Is_Vacant__c.field-meta.xml
<CustomField>
    <fullName>animalos__Is_Vacant__c</fullName>
    <formula>AND(ISPICKVAL(animalos__Unit_Status__c, &apos;Available&apos;),  animalos__Allocation__c = 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Vacant</label>
    <type>Checkbox</type>
</CustomField>