force-app/main/default/objects/animalos__Location__c/fields/animalos__Organisation__c.field-meta.xml
<CustomField>
    <fullName>animalos__Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>