force-app/main/default/objects/animalos__Location__c/fields/animalos__Parent_Block__c.field-meta.xml
<CustomField>
    <fullName>animalos__Parent_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Block</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Sub Locations</relationshipLabel>
    <relationshipName>Sub_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>