force-app/main/default/objects/animalos__Location__c/fields/animalos__QR_Code_Image__c.field-meta.xml
<CustomField>
    <fullName>animalos__QR_Code_Image__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?cht=qr&amp;chs=177x177&amp;chl=recordId:&apos; &amp; Id &amp; &apos;;objectApiName:animalos__Location__c;&apos; ,&apos;QR Code Image&apos;, 200,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code Image</label>
    <type>Text</type>
</CustomField>