force-app/main/default/objects/animalos__Location__c/fields/animalos__Reason_Unavailable__c.field-meta.xml
<CustomField>
    <fullName>animalos__Reason_Unavailable__c</fullName>
    <label>Reason Unavailable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allocated to Animal</fullName>
            </value>
            <value>
                <fullName>Area closed - Facilities</fullName>
            </value>
            <value>
                <fullName>Area closed - Quarantine</fullName>
            </value>
            <value>
                <fullName>Area closed - Staffing</fullName>
            </value>
            <value>
                <fullName>Permanently Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>