force-app/main/default/objects/animalos__Location__c/fields/animalos__Sitename__c.field-meta.xml
<CustomField>
    <fullName>animalos__Sitename__c</fullName>
    <formula>IF( RecordType.Name =&apos;Unit&apos;, animalos__Parent_Block__r.animalos__Parent_Block__r.Name,
    IF( RecordType.Name =&apos;Block&apos;, animalos__Parent_Block__r.Name,
    IF( RecordType.Name =&apos;Site&apos;, Name, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sitename</label>
    <type>Text</type>
</CustomField>