force-app/main/default/objects/animalos__Location__c/fields/animalos__Unavailable_for_Boarding__c.field-meta.xml
<CustomField>
    <fullName>animalos__Unavailable_for_Boarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unavailable for Boarding</label>
    <type>Checkbox</type>
</CustomField>