force-app/main/default/objects/animalos__Location__c/fields/animalos__Vacant_Units__c.field-meta.xml
<CustomField>
    <fullName>animalos__Vacant_Units__c</fullName>
    <label>Vacant Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>