force-app/main/default/objects/animalos__Location__c/fields/aos_Adoptapet_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoptapet_ID__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Adoptapet ID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>