force-app/main/default/objects/animalos__Location__c/fields/aos_AdoptAPet_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_AdoptAPet_Location_Name__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Adoption Website Location Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>