force-app/main/default/objects/animalos__Location__c/fields/aos_AdoptAPet_Location_Ranking__c.field-meta.xml
<CustomField>
    <fullName>aos_AdoptAPet_Location_Ranking__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <description>This fild allows us to determin the order of the picklist on adopt a pet/ nsw adopt a location sits.</description>
    <label>AdoptAPet Location Ranking</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>