force-app/main/default/objects/animalos__Location__c/fields/aos_Adoption_Screen_URL__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Screen_URL__c</fullName>
    <formula>&quot;https://rspcaqld2--aosuat.sandbox.my.salesforce-sites.com/adoptionscreen?unitId=&quot; + aos_Shelter_ID__c</formula>
    <label>Adoption Screen URL</label>
    <type>Text</type>
</CustomField>