force-app/main/default/objects/animalos__Location__c/fields/aos_Animal_Type_from_Block__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Type_from_Block__c</fullName>
    <formula>TEXT(animalos__Parent_Block__r.animalos__Animal_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Type from Block</label>
    <type>Text</type>
</CustomField>