force-app/main/default/objects/animalos__Location__c/fields/aos_Block_Adjusted_Available_Capacity__c.field-meta.xml
<CustomField>
    <fullName>aos_Block_Adjusted_Available_Capacity__c</fullName>
    <label>Block Adjusted Available Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>