force-app/main/default/objects/animalos__Location__c/fields/aos_Can_Accept_Admissions__c.field-meta.xml
<CustomField>
    <fullName>aos_Can_Accept_Admissions__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This is used in the flow Humane Officer Surrender.</description>
    <inlineHelpText>This is relevant for Sites only - This field checked means the Site has an Admissions Block</inlineHelpText>
    <label>Can Accept Admissions</label>
    <type>Checkbox</type>
</CustomField>