force-app/main/default/objects/animalos__Location__c/fields/aos_Delete__c.field-meta.xml
<CustomField>
    <fullName>aos_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>