force-app/main/default/objects/animalos__Location__c/fields/aos_Foster_Animal_Count_This_Month__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Animal_Count_This_Month__c</fullName>
    <label>Foster Animal Count This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>