force-app/main/default/objects/animalos__Location__c/fields/aos_Foster_Animal_Special_Needs_Count__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Animal_Special_Needs_Count__c</fullName>
    <label>Foster Animal Special Needs Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>