force-app/main/default/objects/animalos__Location__c/fields/aos_Foster_Days_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Days_Special_Needs__c</fullName>
    <label>Foster Days Special Needs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>