force-app/main/default/objects/animalos__Location__c/fields/aos_Foster_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Type__c</fullName>
    <label>Foster Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Programs</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>