force-app/main/default/objects/animalos__Location__c/fields/aos_Friday_Close__c.field-meta.xml
<CustomField>
    <fullName>aos_Friday_Close__c</fullName>
    <label>Friday Close</label>
    <type>Time</type>
</CustomField>