force-app/main/default/objects/animalos__Location__c/fields/aos_Friday_Open__c.field-meta.xml
<CustomField>
    <fullName>aos_Friday_Open__c</fullName>
    <label>Friday Open</label>
    <type>Time</type>
</CustomField>