force-app/main/default/objects/animalos__Location__c/fields/aos_IsPetbarn__c.field-meta.xml
<CustomField>
    <fullName>aos_IsPetbarn__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>IF(BEGINS(Name, &quot;Petbarn&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPetbarn</label>
    <type>Checkbox</type>
</CustomField>