force-app/main/default/objects/animalos__Location__c/fields/aos_Monday_Close__c.field-meta.xml
<CustomField>
    <fullName>aos_Monday_Close__c</fullName>
    <label>Monday Close</label>
    <type>Time</type>
</CustomField>