force-app/main/default/objects/animalos__Location__c/fields/aos_Monday_Open__c.field-meta.xml
<CustomField>
    <fullName>aos_Monday_Open__c</fullName>
    <label>Monday Open</label>
    <type>Time</type>
</CustomField>