force-app/main/default/objects/animalos__Location__c/fields/aos_New_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_New_Name__c</fullName>
    <label>New Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>