force-app/main/default/objects/animalos__Location__c/fields/aos_Online_Adoptions__c.field-meta.xml
<CustomField>
    <fullName>aos_Online_Adoptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Adoptions</label>
    <type>Checkbox</type>
</CustomField>