force-app/main/default/objects/animalos__Location__c/fields/aos_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>aos_Operating_Hours__c</fullName>
    <label>Operating Hours</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>