force-app/main/default/objects/animalos__Location__c/fields/aos_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Parent_Name__c</fullName>
    <formula>animalos__Parent_Block__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>