force-app/main/default/objects/animalos__Location__c/fields/aos_Postcode__c.field-meta.xml
<CustomField>
    <fullName>aos_Postcode__c</fullName>
    <label>Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>