force-app/main/default/objects/animalos__Location__c/fields/aos_Saturday_Close__c.field-meta.xml
<CustomField>
    <fullName>aos_Saturday_Close__c</fullName>
    <label>Saturday Close</label>
    <type>Time</type>
</CustomField>