force-app/main/default/objects/animalos__Location__c/fields/aos_Saturday_Open__c.field-meta.xml
<CustomField>
    <fullName>aos_Saturday_Open__c</fullName>
    <label>Saturday Open</label>
    <type>Time</type>
</CustomField>