force-app/main/default/objects/animalos__Location__c/fields/aos_Shelter_Email__c.field-meta.xml
<CustomField>
    <fullName>aos_Shelter_Email__c</fullName>
    <label>Shelter Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>