force-app/main/default/objects/animalos__Location__c/fields/aos_Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>aos_Site_Phone__c</fullName>
    <label>Site Phone</label>
    <type>Phone</type>
</CustomField>