force-app/main/default/objects/animalos__Location__c/fields/aos_State__c.field-meta.xml
<CustomField>
    <fullName>aos_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
                <isActive>false</isActive>
                <label>QLD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>