force-app/main/default/objects/animalos__Location__c/fields/aos_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>aos_Street_Address__c</fullName>
    <label>Street Address</label>
    <type>TextArea</type>
</CustomField>