force-app/main/default/objects/animalos__Location__c/fields/aos_Suburb__c.field-meta.xml
<CustomField>
    <fullName>aos_Suburb__c</fullName>
    <label>Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>