force-app/main/default/objects/animalos__Location__c/fields/aos_Sunday_Close__c.field-meta.xml
<CustomField>
    <fullName>aos_Sunday_Close__c</fullName>
    <label>Sunday Close</label>
    <type>Time</type>
</CustomField>