force-app/main/default/objects/animalos__Location__c/fields/aos_Sunday_Open__c.field-meta.xml
<CustomField>
    <fullName>aos_Sunday_Open__c</fullName>
    <label>Sunday Open</label>
    <type>Time</type>
</CustomField>