force-app/main/default/objects/animalos__Location__c/fields/aos_Sync_All_Animals__c.field-meta.xml
<CustomField>
    <fullName>aos_Sync_All_Animals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync All Animals</label>
    <type>Checkbox</type>
</CustomField>