force-app/main/default/objects/animalos__Location__c/fields/aos_Thursday_Close__c.field-meta.xml
<CustomField>
    <fullName>aos_Thursday_Close__c</fullName>
    <label>Thursday Close</label>
    <type>Time</type>
</CustomField>