force-app/main/default/objects/animalos__Location__c/fields/aos_Thursday_Open__c.field-meta.xml
<CustomField>
    <fullName>aos_Thursday_Open__c</fullName>
    <label>Thursday Open</label>
    <type>Time</type>
</CustomField>