force-app/main/default/objects/animalos__Location__c/fields/aos_Tuesday_Close__c.field-meta.xml
<CustomField>
    <fullName>aos_Tuesday_Close__c</fullName>
    <label>Tuesday Close</label>
    <type>Time</type>
</CustomField>