force-app/main/default/objects/animalos__Location__c/fields/aos_Tuesday_Open__c.field-meta.xml
<CustomField>
    <fullName>aos_Tuesday_Open__c</fullName>
    <label>Tuesday Open</label>
    <type>Time</type>
</CustomField>