force-app/main/default/objects/animalos__Location__c/fields/aos_Wednesday_Close__c.field-meta.xml
<CustomField>
    <fullName>aos_Wednesday_Close__c</fullName>
    <label>Wednesday Close</label>
    <type>Time</type>
</CustomField>