force-app/main/default/objects/animalos__Location__c/fields/aos_Wednesday_Open__c.field-meta.xml
<CustomField>
    <fullName>aos_Wednesday_Open__c</fullName>
    <label>Wednesday Open</label>
    <type>Time</type>
</CustomField>