force-app/main/default/objects/animalos__Location__c/recordTypes/animalos__Block.recordType-meta.xml
<RecordType>
    <fullName>animalos__Block</fullName>
    <active>true</active>
    <label>Block</label>
</RecordType>