force-app/main/default/objects/animalos__Location__c/recordTypes/animalos__Foster.recordType-meta.xml
<RecordType>
    <fullName>animalos__Foster</fullName>
    <active>true</active>
    <label>Foster</label>
</RecordType>