force-app/main/default/objects/animalos__Location__c/recordTypes/animalos__Offsite.recordType-meta.xml
<RecordType>
    <fullName>animalos__Offsite</fullName>
    <active>true</active>
    <label>Offsite</label>
</RecordType>