force-app/main/default/objects/animalos__Location__c/recordTypes/animalos__Site.recordType-meta.xml
<RecordType>
    <fullName>animalos__Site</fullName>
    <active>true</active>
    <label>Site</label>
</RecordType>