force-app/main/default/objects/animalos__Location__c/recordTypes/animalos__Unit.recordType-meta.xml
<RecordType>
    <fullName>animalos__Unit</fullName>
    <active>true</active>
    <label>Unit</label>
</RecordType>