force-app/main/default/objects/animalos__Location__c/validationRules/animalos__UNIT_CAPACITY_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>animalos__UNIT_CAPACITY_REQUIRED</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(), RecordType.DeveloperName = &apos;Unit&apos;,  ISNULL(animalos__Capacity__c))</errorConditionFormula>
    <errorMessage>Capacity is required for Locations with Record Type = Unit</errorMessage>
</ValidationRule>