force-app/main/default/objects/animalos__Location__c/listViews/All_Fosters.listView-meta.xml
<ListView>
    <fullName>All_Fosters</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>animalos__Location__c.animalos__Foster</value>
    </filters>
    <label>All Fosters</label>
</ListView>