force-app/main/default/objects/animalos__Location__c/listViews/All_Offsite.listView-meta.xml
<ListView>
    <fullName>All_Offsite</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>animalos__Location__c.animalos__Offsite</value>
    </filters>
    <label>All Offsite</label>
</ListView>