force-app/main/default/objects/animalos__Location__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>animalos__Parent_Block__c</columns>
    <columns>animalos__Allocation__c</columns>
    <columns>animalos__Availability__c</columns>
    <columns>animalos__Full_Location_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>