force-app/main/default/objects/animalos__Location__c/listViews/aos_All_Sites.listView-meta.xml
<ListView>
    <fullName>aos_All_Sites</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>animalos__Location__c.animalos__Site</value>
    </filters>
    <label>All Sites</label>
</ListView>