force-app/main/default/objects/animalos__Location__c/listViews/aos_All_Units.listView-meta.xml
<ListView>
    <fullName>aos_All_Units</fullName>
    <columns>NAME</columns>
    <columns>animalos__Parent_Block__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>animalos__Location__c.animalos__Unit</value>
    </filters>
    <label>All Units</label>
</ListView>